webapp/channels/src/components/custom_status/custom_status.scss
.modal .StatusModal.GenericModal .StatusModal__clear-container.input-clear {
    position: absolute;
    top: 16px;
    right: 18px;
    color: rgba(var(--center-channel-color-rgb), 0.64);
    opacity: 1;
}

.StatusModal {
    width: 600px;

    &.modal-dialog {
        margin: auto;
    }

    .modal &.GenericModal {
        .modal {
            &-body {
                overflow: visible;
            }
        }

        .emoji-quick-input {
            &.form-control {
                height: 4.8rem;
                padding: 0 4.8rem;
                border-radius: 4px;
                font-size: 14px;
                font-weight: 600;

                &:focus {
                    border-color: var(--button-bg);
                }
            }
        }

        .dateTime__calendar-input {
            border: 2px solid var(--button-bg);
            font-size: 14px;

            &:hover {
                border: 2px solid var(--button-bg);
                cursor: pointer;
            }

            &:focus-within {
                box-shadow: 0;
            }

            .Input_wrapper {
                padding: 0 10px;
            }

            button.dateTime__calendar-icon {
                margin: 0 8px 0 0;
                color: rgba(var(--center-channel-color-rgb), 0.64);
            }

            input#customStatus__calendar-input {
                &.form-control {
                    height: auto;
                    padding: 0;
                    border: 0;
                    font-weight: 400;

                    &[readonly] {
                        background: transparent;
                    }

                    &:hover {
                        cursor: pointer;
                    }
                }
            }
        }
    }

    .GenericModal {
        &__body {
            padding: 0;
        }

        &__button {
            &.btn:disabled,
            &.btn:disabled:hover {
                background: rgba(var(--center-channel-color-rgb), 0.08);
                color: rgba(var(--center-channel-color-rgb), 0.32);
                opacity: 1;
            }
        }
    }

    &__emoji-container {
        position: absolute;
        z-index: 5;
        top: 14px;
        left: 40px;
        margin-right: 2px;
    }

    &__emoji-button {
        display: flex;
        width: 36px;
        height: 36px;
        align-items: center;
        justify-content: center;
        border: none;
        border-radius: 4px;
        background: transparent;
        color: rgba(var(--center-channel-color-rgb), 0.64);
        fill: rgba(var(--center-channel-color-rgb), 0.64);

        &:hover {
            background: rgba(var(--center-channel-color-rgb), 0.08);
            color: rgba(var(--center-channel-color-rgb), 0.8);
            fill: rgba(var(--center-channel-color-rgb), 0.8);
        }

        &:active,
        &--active,
        &--active:hover {
            background: rgba(var(--button-bg-rgb), 0.08);
            color: var(--button-bg);
            fill: var(--button-bg);
        }

        svg {
            width: 20px;
            height: 20px;
        }
    }

    &__footer {
        display: flex;
        align-items: center;
        justify-content: space-between;
        padding: 2rem 0;
        text-align: right;

        .btn {
            height: 4rem;
            padding: 0 2rem;
            border-radius: 4px;
            font-size: 14px;
            font-weight: 600;
        }
    }
}

.status-dropdown-menu,
.StatusModal__input {
    .input-clear-x {
        color: rgba(var(--center-channel-color-rgb), 0.64);

        .icon {
            font-size: 20px;
        }
    }

    .MaxLengthInput__validation {
        top: 17px !important;
        right: 44px !important;
    }

    .MaxLengthInput.form-control.has-error {
        padding-right: 76px !important;
    }
}

.ic-clear-search,
.ic-search {
    position: absolute;
    z-index: 1;
    background-position: center;
    background-repeat: no-repeat;
    cursor: pointer;
}

.ic-clear-search {
    top: 12px;
    right: 12px;
    width: 2rem;
    height: 2rem;
}

.statusSuggestion {
    overflow: auto;
    min-height: 232px;
    max-height: 264px;

    &__content {
        display: flex;
        overflow: auto;
        width: 100%;
        height: 100%;
        flex-direction: column;
        border: none;
        box-shadow: none;
    }

    &__row {
        display: flex;
        width: 100%;
        min-height: 40px;
        align-items: center;
        padding-right: 10px;
        padding-left: 18px;
        border: none;
        background: transparent;
        color: var(--center-channel-color);
        font-size: inherit;

        &:hover {
            border-radius: 4px;
            background-color: rgba(var(--center-channel-color-rgb), 0.08);
        }

        &:active {
            background-color: rgba(var(--button-bg-rgb), 0.08);
            color: v(button-bg);
        }
    }

    &__icon {
        margin-right: 15px;
        margin-bottom: 1px;
    }

    &__title {
        display: flex;
        height: 24px;
        margin-top: 8px;
        color: rgba(var(--center-channel-color-rgb), 0.55);
        font-size: 12px;
        font-weight: 600;
    }

    &__text {
        overflow: hidden;
        height: 20px;
        font-weight: 600;
        text-overflow: ellipsis;
        white-space: nowrap;

        &.with_duration {
            max-width: 62%;
        }
    }

    &__duration {
        margin-left: 8px;
        color: rgba(var(--center-channel-color-rgb), 0.75);
        font-size: 14px;
        font-weight: 400;
        line-height: 14px;
    }
}

.suggestion-clear {
    margin-top: 3px;
    margin-left: auto;
}

#custom-status-tooltip {
    p {
        margin: 0;
    }

    .custom-status {
        display: flex;
        flex-direction: column;
        align-items: center;

        &-expiry {
            color: rgba(255, 255, 255, 0.72);
            font-size: 11px;
            font-weight: 400;
        }

        .custom-status-text-container {
            display: flex;
            flex-direction: column;
            text-align: center;
        }
    }
}

span.emoticon[style]:hover {
    opacity: 1 !important;
}

.statusExpiry {
    display: inline-block;
    margin-top: 12px;
    font-size: 14px;

    &__menu {
        cursor: pointer;

        .expiry-value {
            margin-right: 4px;
            font-weight: 600;
        }
    }
}

.dateTime {
    display: flex;
    margin: 24px 0 8px;
    gap: 16px;

    & &__date {
        position: relative;
        width: 100%;

        &-icon {
            position: absolute;
            top: 11.3px;
            left: 15px;
        }
    }

    & &__time {
        position: relative;
        width: 100%;

        .style--none {
            width: 100%;
        }

        #expiryTimeMenu .dropdown-menu {
            overflow: auto;
            min-width: 266px;
            max-height: 268px;
        }

        &-icon {
            position: absolute;
            top: 9.5px;
            left: 15px;
        }

        .dateTime__input {
            display: flex;
            align-items: center;
        }
    }

    & &__input {
        width: 266px;
        height: 40px;
        padding: 10px 40px;
        border: 2px solid var(--button-bg);
        border-radius: 4px;
        background: var(--center-channel-bg);
        color: var(--center-channel-color);
        cursor: pointer;
        font-size: 14px;
        text-align: left;

        &-title {
            position: absolute;
            bottom: 32px;
            left: 12px;
            padding: 0 4px;
            background: var(--center-channel-bg);
            color: rgba(var(--center-channel-color-rgb), 0.75);
            font-size: 10px;
            letter-spacing: 0.03em;
            line-height: 16px;
        }
    }
}

